# medsmart-server

./: Dockerfile  alembic.ini  compose.local.yml  compose.yml  pyproject.toml
nginx/sites-available/: medsmart.site
run/: .gitignore
sandbox/: fluorography_recognition.ipynb  heart_disease_detection.ipynb  sandbox.ipynb
scripts/local/: build.sh  just-up.sh  up.sh
scripts/local/alembic/: revision.sh  upgrade.sh
scripts/local/db/: up.sh
scripts/local/server/: restart.sh
scripts/prod/: deploy.sh  down.sh  just-deploy.sh  just-up.sh  nginx-deploy.sh  up.sh
scripts/prod/alembic/: upgrade.sh
src/: app.py  config.py  gunicorn.conf.py  remote_migration.py
src/alembic/: env.py
src/alembic/versions/: f7aa4f5a9b87_initial.py
src/application/: exceptions.py
src/application/dependencies/: auth.py  config.py  session.py
src/application/dependencies/ai/: heart.py  pneumonia.py
src/application/handlers/: auth.py  images.py  predict.py  users.py
src/domain/entities/: __init__.py  jwt.py  user.py
src/infrastructure/: engine.py
src/infrastructure/entities/: __init__.py  all.py
src/infrastructure/entities/mixins/: audit.py
src/log/: config.json  filters.py  formatters.py  setup.py
src/utils/: alembic_config.py  cookies.py  dicom2image.py  exceptions.py  form.py  get_random_uuid.py  log.py  password.py
