[tool.poetry]
name = "med_exam_server"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
SQLAlchemy = { extras = ["asyncio"], version = "^2.0.30" }
alembic = "^1.13.1"
asyncpg = "^0.29.0"
PyJWT = { extras = ["crypto"], version = "^2.8.0" }
cryptography = "^42.0.7"
bcrypt = "^4.1.3"
pydicom = "^2.4.4"
python-multipart = "^0.0.9"
numpy = "^1.26.4"
pandas = "^2.2.2"
xgboost = "^2.0.3"
tensorflow = "^2.16.1"
keras = "^3.3.3"
pillow = "^10.3.0"
opencv-python-headless = "^4.9.0.80"
gunicorn = "^22.0.0"
joblib = "^1.4.2"
scikit-learn = "^1.4.2"

[tool.poetry.group.dev.dependencies]
sshtunnel = "^0.4.0"
black = "^24.4.2"
isort = "^5.13.2"
notebook = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
